; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-db/extr_rmsgpack.c_read_uint.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-db/extr_rmsgpack.c_read_uint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i64)* @read_uint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_uint(i32* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i64, i64* %7, align 8
  %11 = call i32 @filestream_read(i32* %9, i32* %8, i64 %10)
  %12 = icmp eq i32 %11, -1
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  br label %32

14:                                               ; preds = %3
  %15 = load i64, i64* %7, align 8
  switch i64 %15, label %31 [
    i64 1, label %16
    i64 2, label %19
    i64 4, label %23
    i64 8, label %27
  ]

16:                                               ; preds = %14
  %17 = load i32, i32* %8, align 4
  %18 = load i32*, i32** %6, align 8
  store i32 %17, i32* %18, align 4
  br label %31

19:                                               ; preds = %14
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @swap_if_little16(i32 %20)
  %22 = load i32*, i32** %6, align 8
  store i32 %21, i32* %22, align 4
  br label %31

23:                                               ; preds = %14
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @swap_if_little32(i32 %24)
  %26 = load i32*, i32** %6, align 8
  store i32 %25, i32* %26, align 4
  br label %31

27:                                               ; preds = %14
  %28 = load i32, i32* %8, align 4
  %29 = call i32 @swap_if_little64(i32 %28)
  %30 = load i32*, i32** %6, align 8
  store i32 %29, i32* %30, align 4
  br label %31

31:                                               ; preds = %14, %27, %23, %19, %16
  store i32 0, i32* %4, align 4
  br label %35

32:                                               ; preds = %13
  %33 = load i32, i32* @errno, align 4
  %34 = sub nsw i32 0, %33
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %32, %31
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @filestream_read(i32*, i32*, i64) #1

declare dso_local i32 @swap_if_little16(i32) #1

declare dso_local i32 @swap_if_little32(i32) #1

declare dso_local i32 @swap_if_little64(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
